fix minor spacing issues in sidebar

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -3,7 +3,6 @@ div#sidebar-left, div#sidebar-right {
   border-top: 2px solid #666666;
   border-bottom: 2px solid #666666;
   margin-top:7ex;
-  padding-bottom:5ex;
 
   h3.menu {
     color : #336633;
@@ -11,7 +10,8 @@ div#sidebar-left, div#sidebar-right {
     border-bottom : 1px solid #666666;
   }
   ul.menu {
-    margin-top : 0px;
+    margin-top : 7px;
+    margin-bottom : 7px;
     padding-left : 0px;
     list-style-type : none;
     li {
